--- a/emulator/Makefile
+++ b/emulator/Makefile
@@ -1,3 +1,13 @@
+all: alm
 
-all: 
-	echo "No vm yet!"
+alm: .obj/alm_main.o
+	gcc -o $@ $^
+
+.obj/%.o: src/%.c .obj
+	gcc -g -c -werror -o $@ $<
+
+.obj:
+	mkdir -p .obj
+
+clean:
+	rm -rf .obj alm
