Basic file loading and validation

--- a/emulator/Makefile
+++ b/emulator/Makefile
@@ -1,10 +1,10 @@
 all: alm
 
-alm: .obj/alm_main.o
+alm: .obj/alm_main.o .obj/alm_loader.o
 	gcc -o $@ $^
 
 .obj/%.o: src/%.c .obj
-	gcc -g -c -werror -o $@ $<
+	gcc -g -c -werror -Isrc -o $@ $<
 
 .obj:
 	mkdir -p .obj
