Refactor some code in emulator

--- a/emulator/Makefile
+++ b/emulator/Makefile
@@ -1,7 +1,7 @@
 all: alm
 
 alm: .obj/alm_main.o .obj/alm_loader.o
-	gcc -o $@ $^
+	gcc -g -o $@ $^
 
 .obj/%.o: src/%.c .obj
 	gcc -g -c -werror -Isrc -o $@ $<
