Add emulator loop

--- a/emulator/Makefile
+++ b/emulator/Makefile
@@ -1,16 +1,16 @@
 OBJ_DIR=.obj
-OBJ=$(OBJ_DIR)/alm_main.o $(OBJ_DIR)/alm_loader.o $(OBJ_DIR)/alm_debug.o
+OBJ=$(OBJ_DIR)/alm_main.o $(OBJ_DIR)/alm_loader.o $(OBJ_DIR)/alm_debug.o $(OBJ_DIR)/alm_emu.o
 
 all: alm
 
-alm: $(OBJ)
-	gcc -g -o $@ $^
+alm: $(OBJ_DIR) $(OBJ)
+	gcc -g -o $@ $(OBJ)
 
-.obj/%.o: src/%.c .obj
+.obj/%.o: src/%.c
 	gcc -g -c -werror -Isrc -o $@ $<
 
-.obj:
-	mkdir -p .obj
+$(OBJ_DIR):
+	mkdir -p $@
 
 clean:
 	rm -rf .obj alm
